--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="container_footer">
             <h4>COFFEE AND BAKERY SHOP</h4>
             <br>
-            <p><a href="https://www.google.com/">FACEBOOK </a> | <a href="https://www.google.com/"> INSTAGRAM</a></p>
+            <p><a href="https://www.facebook.com/">FACEBOOK </a> | <a href="https://www.instagram.com/"> INSTAGRAM</a></p>
         </div>
     </footer>
 
