--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                 </div>
               </nav>
 
+              <div class="coffee">
+                  COFFEE
+              </div>
         </div>
     </header>
 
