--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link href='http://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
+
     <link rel="stylesheet" href="css/menu.css">
     <title>COFFEE AND BAKERY SHOP</title>
 </head>
