--- a/menu.html
+++ b/menu.html
@@ -11,6 +11,10 @@
 </head>
 <body>
 
+  <div class="home">
+    <p> <a href="index.html"> BACK TO HOME </a></p>
+  </div>
+
     <div class="container">
 
         <table style="width:100%">
